# tweetter

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md  docker-compose.yml  events.json
app/: Makefile.toml  package-lock.json  package.json
app/src/: App.tsx  Header.tsx  NotFound.tsx  Page.tsx  index.css  index.tsx
app/src/profile/: client.tsx  content.tsx  index.tsx  picture.tsx  tweets.tsx  userDetail.tsx
backend/controller/: Cargo.toml  Makefile.toml
backend/controller/src/: lib.rs
backend/events/: Cargo.toml
backend/events/src/: lib.rs  tweets.rs  user.rs
backend/message_broker/: Cargo.toml
backend/read_model/: Makefile.toml
backend/repository/: Cargo.toml  Makefile.toml
backend/repository/migrations/2022-11-15-181339_create-user-profile/: up.sql
backend/repository/migrations/2022-11-24-184635_tweets-fk/: down.sql  up.sql
backend/repository/src/: lib.rs  repo.rs  schema.rs
backend/repository/src/event_sourcing/: event_store.rs  mod.rs  tweet.rs  user.rs
backend/repository/src/event_sourcing/aggregate/: user.rs
backend/repository/src/event_sourcing/command/: user.rs
backend/repository/src/read_models/: mod.rs  tweets.rs  user_profile.rs
backend/web-server/: Cargo.toml
members/controller/: Cargo.toml
members/events/: Cargo.toml
members/message_broker/: Cargo.toml
members/model/: Cargo.toml
members/read_model/: Cargo.toml
members/repository/: Cargo.toml  Makefile.toml
members/web/: Cargo.toml
members/web-server/: Cargo.toml
migrations/2022-11-10-193355_create_events/: up.sql
src/: schema.rs
(+45 files in other folders)
