[package]
name = "repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
anyhow = "1.0"
diesel = { version = "2.0.0", features = ["postgres","chrono"] }
dotenvy = "0.15.6"
serde_json = "1.0"
events = { path = "../events"}
message_broker = { path = "../message_broker"}
chrono = "0.4.22"